# test

./: .clang-format  .gitignore  .releaserc.yml  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  funding.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST.md.license
.github/workflows/: build.yml  dev-container.yml  link-checker.yml  release.yml  static-checks.yml
.reuse/: dep5
.reuse/templates/: header.jinja2
ci/docker/: linux.Dockerfile  ubuntu-20.04.Dockerfile
ci/docker/ubuntu/: 20.04.Dockerfile
cmake/: oricadVersionDetails.cmake
docs/: CHANGELOG.md  CHANGELOG.md.license  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  SUPPORT.md
scripts/: add_license.sh  get_latest_tag.sh  set-version.sh
src/oricad/: CMakeLists.txt
src/oricad/app/: CMakeLists.txt  oricad.m.cpp
src/oricad/app/resources/images/: images.qrc  splash.png.license
src/oricad/app/resources/qml/: MainWindow.qml  SplashWindow.qml  main.qml  qml.qrc
src/oricad/core/: CMakeLists.txt  appdata.cpp  appdata.h  configuration.cpp  configuration.h  creasepattern.cpp  creasepattern.h  creasepatternemptyutil.cpp  creasepatternemptyutil.h  document.cpp  document.h  documentioservice.cpp  documentioservice.h  documentmanager.cpp  documentmanager.h  documentmanager.t.cpp  file.cpp  file.h  preferences.cpp  preferences.h  recentitems.cpp  recentitems.h  settings.cpp  settings.h
src/oricad/core/concepts/: CMakeLists.txt  aggregatedattributesconcept.cpp  aggregatedattributesconcept.h  aggregatedconcept.cpp  aggregatedconcept.h  aggregatedreducer.cpp  aggregatedreducer.h  attributeaction.cpp  attributeaction.h  attributeconcept.cpp  attributeconcept.h  basicconcept.cpp  basicconcept.h  basicreducer.cpp  basicreducer.h  component.cpp  component.h  concept.cpp  concept.h  defaultboolconcept.cpp  defaultboolconcept.h  defaultconcept.cpp  defaultconcept.h  defaultstore.cpp  defaultstore.h  enabled.cpp  enabled.h  generalconcept.cpp  generalconcept.h  reducer.cpp  reducer.h
src/oricad/gui/: CMakeLists.txt  documentsmodel.cpp  documentsmodel.h  qtdocumentioservice.cpp  qtdocumentioservice.h  recentitemsmenu.cpp  recentitemsmenu.h  settingsitem.cpp  settingsitem.h  settingsmodel.cpp  settingsmodel.h
